# Real-Time-Gesture-Recognition-OpenCV-ML

./: README.md
Progetto_IPA-ML/IPA_Project-main/IPA_Project/: CMakeLists.txt
Progetto_IPA-ML/IPA_Project-main/IPA_Project/dependencies/: CMakeLists.txt
Progetto_IPA-ML/IPA_Project-main/IPA_Project/src/: EntryPoint.cpp  PythonSystem.cpp  PythonSystem.hpp  Singleton.hpp
Progetto_IPA-ML/ML_Project-main/DatasetsCsv/: gesture_train_dataset_v1.csv
Progetto_IPA-ML/ML_Project-main/DatasetsCsv/Dataset 2/: gesture_test_dataset_v2.csv
Progetto_IPA-ML/ML_Project-main/DatasetsCsv/Dataset 2/Gesture_3_Scorn/: gesture_3.csv
Progetto_IPA-ML/ML_Project-main/DatasetsCsv/Dataset 2/Gesture_4_Open_Hand/: gesture_4.csv
Progetto_IPA-ML/ML_Project-main/DatasetsCsv/Gesture_0_Noise/: gesture_0.csv
Progetto_IPA-ML/ML_Project-main/DatasetsCsv/Gesture_1_YEH/: gesture_1.csv
Progetto_IPA-ML/ML_Project-main/DatasetsCsv/Gesture_2_FullHand/: gesture_2.csv
Progetto_IPA-ML/ML_Project-main/DatasetsCsv/Gesture_3_ThreeFingers/: gesture_3.csv  gesture_3_PT1.csv  gesture_3_PT2.csv
Progetto_IPA-ML/ML_Project-main/DatasetsCsv/Gesture_4_TwoFingers/: gesture_4.csv
Progetto_IPA-ML/ML_Project-main/ML/: SVtraindSave.py  main.py
Progetto_IPA-ML/ML_Project-main/ML/datasets/: gesture_0.csv  gesture_test_dataset_v1.csv  gesture_test_dataset_v1_noNoise.csv  gesture_train_dataset_v2.csv
Progetto_IPA-ML/ML_Project-main/ML/pybindSave/: knn_model.joblib  scaler.joblib  scaler_new.joblib  scaler_old.joblib  svm_model.joblib  svm_model_new.joblib  svm_model_old.joblib
(+14 files in other folders)
